chore: setup the api backend
